cc_legal_tools/static/cc-legal-tools/base.css
body {
  background-color: rgb(245, 245, 245);
}
html[dir="rtl"] nav.breadcrumb>ul li+li:before {
  transform: scaleX(-1);
}
html[dir="rtl"] .breadcrumb li:first-child a {
  padding-right: 0;
  padding-left: .5rem;
}
a.skip-link {
  left:-999px;
  position:absolute;
  top:auto;
  width:1px;
  height:1px;
  overflow:hidden;
  z-index:-999;
}
a.skip-link:focus, a.skip-link:active {
  color: black;
  font-weight: bolder;
  left: auto;
  top: auto;
  width: 30%;
  height: auto;
  overflow:auto;
  margin: 10px 35%;
  padding:5px;
  background-color: rgb(255, 255, 255);
  border-top: 10px solid rgb(60, 92, 153);
  border-bottom: 5px solid rgb(176, 176, 176);
  border-left: 5px solid rgb(176, 176, 176);
  border-right: 5px solid rgb(176, 176, 176);
  text-align:center;
  font-size:1.2em;
  z-index:999;
}


/* begin Vocabulary modifications for templates/includes/newsletter.html */

.button.is-primary {
  position: relative;
}

input[type='email'] {
  margin: 0;
  padding: 0;
  width: 100%;
  outline: none;
  border-radius: 5px;
}

button.button.is-primary {
 border-radius: 5px;
  text-align: center !important;
  border: none;
  height: 50px;
  top: 8px;
  cursor: pointer;
  width: 80px;
  transform: translateX(-78px);
}

/* end Vocabulary modifications for templates/includes/newsletter.html */

